--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
+    "deploy": "bash /Users/user/projects/ow-conv-client/build.sh",
     "test": "npm run unit && npm run eslint",
     "eslint": "eslint *.js test",
     "unit": "istanbul cover _mocha test/unit -- -R spec"
@@ -11,24 +12,10 @@
   "author": "",
   "license": "ALv2",
   "dependencies": {
-    "alexa-verifier": "0.3.6",
-    "openwhisk": "^3.7.0",
+    "bluebird": "^3.5.1",
+    "chalk": "^2.3.1",
     "redis": "2.7.1",
-    "request": "^2.83.0",
-    "watson-developer-cloud": "2.32.1"
-  },
-  "devDependencies": {
-    "chai": "^4.1.2",
-    "eslint": "^4.7.2",
-    "eslint-config-google": "^0.9.1",
-    "eslint-config-prettier": "^2.6.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-prettier": "^2.3.1",
-    "istanbul": "^0.4.5",
-    "mocha": "^4.0.0",
-    "prettier": "^1.7.0",
-    "rewire": "^2.5.2",
-    "sinon": "^4.0.0",
-    "sinon-test": "^2.1.1"
+    "url": "^0.11.0",
+    "watson-developer-cloud": "^3.0.6"
   }
 }
